// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs should render correctly based on type and active state renders correctly for type 'dot' with active tab 'a' 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        [
          {
            "flexDirection": "row",
          },
          {
            "marginLeft": -8,
            "marginTop": -8,
          },
        ]
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "overflow": "hidden",
            },
            [
              {
                "paddingLeft": 19,
                "paddingRight": 19,
              },
              {
                "paddingBottom": 9,
                "paddingTop": 9,
              },
              [
                {
                  "marginLeft": 8,
                  "marginTop": 8,
                },
              ],
            ],
          ]
        }
      >
        <View>
          <Text
            style={
              [
                {
                  "textAlign": "left",
                },
                {
                  "color": "#FFFFFF",
                  "writingDirection": "ltr",
                },
                [
                  {
                    "fontFamily": "Pretendard-Medium",
                    "fontSize": 16,
                    "fontWeight": "500",
                    "letterSpacing": -0.02,
                    "lineHeight": 18,
                  },
                  [
                    {
                      "color": "#FFFFFF",
                    },
                  ],
                ],
              ]
            }
          >
            Tab A
          </Text>
          <Text
            style={
              [
                {
                  "textAlign": "left",
                },
                {
                  "color": "#FFFFFF",
                  "fontFamily": "Pretendard-Medium",
                  "fontSize": 16,
                  "fontWeight": "500",
                  "letterSpacing": -0.02,
                  "lineHeight": 18,
                },
                {
                  "writingDirection": "ltr",
                },
                [
                  {
                    "textAlign": "center",
                  },
                ],
              ]
            }
          >
            •
          </Text>
        </View>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "overflow": "hidden",
            },
            [
              {
                "paddingLeft": 19,
                "paddingRight": 19,
              },
              {
                "paddingBottom": 9,
                "paddingTop": 9,
              },
              [
                {
                  "marginLeft": 8,
                  "marginTop": 8,
                },
              ],
            ],
          ]
        }
      >
        <View>
          <Text
            style={
              [
                {
                  "textAlign": "left",
                },
                {
                  "color": "#FFFFFF",
                  "writingDirection": "ltr",
                },
                [
                  {
                    "fontFamily": "Pretendard-Medium",
                    "fontSize": 16,
                    "fontWeight": "500",
                    "letterSpacing": -0.02,
                    "lineHeight": 18,
                  },
                  [
                    {
                      "color": "#7E7D7D",
                    },
                  ],
                ],
              ]
            }
          >
            Tab B
          </Text>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`Tabs should render correctly based on type and active state renders correctly for type 'dot' with active tab 'b' 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        [
          {
            "flexDirection": "row",
          },
          {
            "marginLeft": -8,
            "marginTop": -8,
          },
        ]
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "overflow": "hidden",
            },
            [
              {
                "paddingLeft": 19,
                "paddingRight": 19,
              },
              {
                "paddingBottom": 9,
                "paddingTop": 9,
              },
              [
                {
                  "marginLeft": 8,
                  "marginTop": 8,
                },
              ],
            ],
          ]
        }
      >
        <View>
          <Text
            style={
              [
                {
                  "textAlign": "left",
                },
                {
                  "color": "#FFFFFF",
                  "writingDirection": "ltr",
                },
                [
                  {
                    "fontFamily": "Pretendard-Medium",
                    "fontSize": 16,
                    "fontWeight": "500",
                    "letterSpacing": -0.02,
                    "lineHeight": 18,
                  },
                  [
                    {
                      "color": "#7E7D7D",
                    },
                  ],
                ],
              ]
            }
          >
            Tab A
          </Text>
        </View>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "overflow": "hidden",
            },
            [
              {
                "paddingLeft": 19,
                "paddingRight": 19,
              },
              {
                "paddingBottom": 9,
                "paddingTop": 9,
              },
              [
                {
                  "marginLeft": 8,
                  "marginTop": 8,
                },
              ],
            ],
          ]
        }
      >
        <View>
          <Text
            style={
              [
                {
                  "textAlign": "left",
                },
                {
                  "color": "#FFFFFF",
                  "writingDirection": "ltr",
                },
                [
                  {
                    "fontFamily": "Pretendard-Medium",
                    "fontSize": 16,
                    "fontWeight": "500",
                    "letterSpacing": -0.02,
                    "lineHeight": 18,
                  },
                  [
                    {
                      "color": "#FFFFFF",
                    },
                  ],
                ],
              ]
            }
          >
            Tab B
          </Text>
          <Text
            style={
              [
                {
                  "textAlign": "left",
                },
                {
                  "color": "#FFFFFF",
                  "fontFamily": "Pretendard-Medium",
                  "fontSize": 16,
                  "fontWeight": "500",
                  "letterSpacing": -0.02,
                  "lineHeight": 18,
                },
                {
                  "writingDirection": "ltr",
                },
                [
                  {
                    "textAlign": "center",
                  },
                ],
              ]
            }
          >
            •
          </Text>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`Tabs should render correctly based on type and active state renders correctly for type 'outline' with active tab 'a' 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        [
          {
            "flexDirection": "row",
          },
          {
            "marginLeft": -12,
            "marginTop": -12,
          },
        ]
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "overflow": "hidden",
            },
            [
              {
                "paddingLeft": 18,
                "paddingRight": 18,
              },
              {
                "paddingBottom": 8,
                "paddingTop": 8,
              },
              {
                "borderBottomWidth": 1,
                "borderLeftWidth": 1,
                "borderRightWidth": 1,
                "borderTopWidth": 1,
              },
              {
                "borderBottomColor": "#F2F862",
                "borderLeftColor": "#F2F862",
                "borderRightColor": "#F2F862",
                "borderTopColor": "#F2F862",
              },
              {
                "borderBottomLeftRadius": 20,
                "borderBottomRightRadius": 20,
                "borderTopLeftRadius": 20,
                "borderTopRightRadius": 20,
              },
              {
                "overflow": "hidden",
              },
              [
                {
                  "marginLeft": 12,
                  "marginTop": 12,
                },
              ],
            ],
          ]
        }
      >
        <View>
          <Text
            style={
              [
                {
                  "textAlign": "left",
                },
                {
                  "color": "#FFFFFF",
                  "writingDirection": "ltr",
                },
                [
                  {
                    "fontFamily": "Pretendard-Medium",
                    "fontSize": 16,
                    "fontWeight": "500",
                    "letterSpacing": -0.02,
                    "lineHeight": 18,
                  },
                  [
                    {
                      "color": "#FFFFFF",
                    },
                  ],
                ],
              ]
            }
          >
            Tab A
          </Text>
        </View>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "overflow": "hidden",
            },
            [
              {
                "paddingLeft": 19,
                "paddingRight": 19,
              },
              {
                "paddingBottom": 9,
                "paddingTop": 9,
              },
              {
                "borderBottomLeftRadius": 20,
                "borderBottomRightRadius": 20,
                "borderTopLeftRadius": 20,
                "borderTopRightRadius": 20,
              },
              {
                "overflow": "hidden",
              },
              [
                {
                  "marginLeft": 12,
                  "marginTop": 12,
                },
              ],
            ],
          ]
        }
      >
        <View>
          <Text
            style={
              [
                {
                  "textAlign": "left",
                },
                {
                  "color": "#FFFFFF",
                  "writingDirection": "ltr",
                },
                [
                  {
                    "fontFamily": "Pretendard-Medium",
                    "fontSize": 16,
                    "fontWeight": "500",
                    "letterSpacing": -0.02,
                    "lineHeight": 18,
                  },
                  [
                    {
                      "color": "#FFFFFF",
                    },
                  ],
                ],
              ]
            }
          >
            Tab B
          </Text>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`Tabs should render correctly based on type and active state renders correctly for type 'outline' with active tab 'b' 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        [
          {
            "flexDirection": "row",
          },
          {
            "marginLeft": -12,
            "marginTop": -12,
          },
        ]
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "overflow": "hidden",
            },
            [
              {
                "paddingLeft": 19,
                "paddingRight": 19,
              },
              {
                "paddingBottom": 9,
                "paddingTop": 9,
              },
              {
                "borderBottomLeftRadius": 20,
                "borderBottomRightRadius": 20,
                "borderTopLeftRadius": 20,
                "borderTopRightRadius": 20,
              },
              {
                "overflow": "hidden",
              },
              [
                {
                  "marginLeft": 12,
                  "marginTop": 12,
                },
              ],
            ],
          ]
        }
      >
        <View>
          <Text
            style={
              [
                {
                  "textAlign": "left",
                },
                {
                  "color": "#FFFFFF",
                  "writingDirection": "ltr",
                },
                [
                  {
                    "fontFamily": "Pretendard-Medium",
                    "fontSize": 16,
                    "fontWeight": "500",
                    "letterSpacing": -0.02,
                    "lineHeight": 18,
                  },
                  [
                    {
                      "color": "#FFFFFF",
                    },
                  ],
                ],
              ]
            }
          >
            Tab A
          </Text>
        </View>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "overflow": "hidden",
            },
            [
              {
                "paddingLeft": 18,
                "paddingRight": 18,
              },
              {
                "paddingBottom": 8,
                "paddingTop": 8,
              },
              {
                "borderBottomWidth": 1,
                "borderLeftWidth": 1,
                "borderRightWidth": 1,
                "borderTopWidth": 1,
              },
              {
                "borderBottomColor": "#F2F862",
                "borderLeftColor": "#F2F862",
                "borderRightColor": "#F2F862",
                "borderTopColor": "#F2F862",
              },
              {
                "borderBottomLeftRadius": 20,
                "borderBottomRightRadius": 20,
                "borderTopLeftRadius": 20,
                "borderTopRightRadius": 20,
              },
              {
                "overflow": "hidden",
              },
              [
                {
                  "marginLeft": 12,
                  "marginTop": 12,
                },
              ],
            ],
          ]
        }
      >
        <View>
          <Text
            style={
              [
                {
                  "textAlign": "left",
                },
                {
                  "color": "#FFFFFF",
                  "writingDirection": "ltr",
                },
                [
                  {
                    "fontFamily": "Pretendard-Medium",
                    "fontSize": 16,
                    "fontWeight": "500",
                    "letterSpacing": -0.02,
                    "lineHeight": 18,
                  },
                  [
                    {
                      "color": "#FFFFFF",
                    },
                  ],
                ],
              ]
            }
          >
            Tab B
          </Text>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`Tabs should render correctly based on type and active state renders correctly for type 'underline' with active tab 'a' 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        [
          {
            "flexDirection": "row",
          },
          {
            "backgroundColor": "#000000",
          },
        ]
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "overflow": "hidden",
            },
            [
              {
                "flexBasis": "0%",
                "flexGrow": 1,
                "flexShrink": 1,
              },
              {
                "paddingBottom": 12,
                "paddingTop": 12,
              },
              {
                "alignItems": "center",
              },
              {
                "borderBottomWidth": 1,
              },
              {
                "borderBottomColor": "#2F2F30",
                "borderLeftColor": "#2F2F30",
                "borderRightColor": "#2F2F30",
                "borderTopColor": "#2F2F30",
              },
              {
                "borderBottomColor": "#EDEDED",
                "borderLeftColor": "#EDEDED",
                "borderRightColor": "#EDEDED",
                "borderTopColor": "#EDEDED",
              },
            ],
          ]
        }
      >
        <View>
          <Text
            style={
              [
                {
                  "textAlign": "left",
                },
                {
                  "color": "#FFFFFF",
                  "writingDirection": "ltr",
                },
                [
                  {
                    "fontFamily": "Pretendard-Medium",
                    "fontSize": 16,
                    "fontWeight": "500",
                    "letterSpacing": -0.02,
                    "lineHeight": 18,
                  },
                  [
                    {
                      "color": "#EDEDED",
                    },
                  ],
                ],
              ]
            }
          >
            Tab A
          </Text>
        </View>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "overflow": "hidden",
            },
            [
              {
                "flexBasis": "0%",
                "flexGrow": 1,
                "flexShrink": 1,
              },
              {
                "paddingBottom": 12,
                "paddingTop": 12,
              },
              {
                "alignItems": "center",
              },
              {
                "borderBottomWidth": 1,
              },
              {
                "borderBottomColor": "#2F2F30",
                "borderLeftColor": "#2F2F30",
                "borderRightColor": "#2F2F30",
                "borderTopColor": "#2F2F30",
              },
            ],
          ]
        }
      >
        <View>
          <Text
            style={
              [
                {
                  "textAlign": "left",
                },
                {
                  "color": "#FFFFFF",
                  "writingDirection": "ltr",
                },
                [
                  {
                    "fontFamily": "Pretendard-Medium",
                    "fontSize": 16,
                    "fontWeight": "500",
                    "letterSpacing": -0.02,
                    "lineHeight": 18,
                  },
                  [
                    {
                      "color": "#585858",
                    },
                  ],
                ],
              ]
            }
          >
            Tab B
          </Text>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`Tabs should render correctly based on type and active state renders correctly for type 'underline' with active tab 'b' 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        [
          {
            "flexDirection": "row",
          },
          {
            "backgroundColor": "#000000",
          },
        ]
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "overflow": "hidden",
            },
            [
              {
                "flexBasis": "0%",
                "flexGrow": 1,
                "flexShrink": 1,
              },
              {
                "paddingBottom": 12,
                "paddingTop": 12,
              },
              {
                "alignItems": "center",
              },
              {
                "borderBottomWidth": 1,
              },
              {
                "borderBottomColor": "#2F2F30",
                "borderLeftColor": "#2F2F30",
                "borderRightColor": "#2F2F30",
                "borderTopColor": "#2F2F30",
              },
            ],
          ]
        }
      >
        <View>
          <Text
            style={
              [
                {
                  "textAlign": "left",
                },
                {
                  "color": "#FFFFFF",
                  "writingDirection": "ltr",
                },
                [
                  {
                    "fontFamily": "Pretendard-Medium",
                    "fontSize": 16,
                    "fontWeight": "500",
                    "letterSpacing": -0.02,
                    "lineHeight": 18,
                  },
                  [
                    {
                      "color": "#585858",
                    },
                  ],
                ],
              ]
            }
          >
            Tab A
          </Text>
        </View>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "overflow": "hidden",
            },
            [
              {
                "flexBasis": "0%",
                "flexGrow": 1,
                "flexShrink": 1,
              },
              {
                "paddingBottom": 12,
                "paddingTop": 12,
              },
              {
                "alignItems": "center",
              },
              {
                "borderBottomWidth": 1,
              },
              {
                "borderBottomColor": "#2F2F30",
                "borderLeftColor": "#2F2F30",
                "borderRightColor": "#2F2F30",
                "borderTopColor": "#2F2F30",
              },
              {
                "borderBottomColor": "#EDEDED",
                "borderLeftColor": "#EDEDED",
                "borderRightColor": "#EDEDED",
                "borderTopColor": "#EDEDED",
              },
            ],
          ]
        }
      >
        <View>
          <Text
            style={
              [
                {
                  "textAlign": "left",
                },
                {
                  "color": "#FFFFFF",
                  "writingDirection": "ltr",
                },
                [
                  {
                    "fontFamily": "Pretendard-Medium",
                    "fontSize": 16,
                    "fontWeight": "500",
                    "letterSpacing": -0.02,
                    "lineHeight": 18,
                  },
                  [
                    {
                      "color": "#EDEDED",
                    },
                  ],
                ],
              ]
            }
          >
            Tab B
          </Text>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;
